<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:title="@string/medicine"
        android:id="@+id/medicine"
        android:icon="@drawable/baseline_medical_services_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:title="@string/diabetes"
        android:id="@+id/diabetes"
        android:icon="@drawable/baseline_playlist_add_circle_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <item
        android:title="@string/signOut"
        android:id="@+id/signOut"
        android:icon="@drawable/baseline_logout_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</menu>