<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MedicineUpdateFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMedicineUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/medicineUpdate"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/date_format"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineDateAdd"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineDateAdd" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="00:00"
                android:inputType="time"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineTimeAdd"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineTimeAdd" />

            <EditText
                android:id="@+id/etMedicineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/medicineNameInfo"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineNameUpdate"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineNameUpdate" />

            <EditText
                android:id="@+id/etMedicineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/medicineDetailsInfo"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineDetailAdd"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineDetailAdd" />

            <Spinner
                android:id="@+id/spinnerMedicineNumbers"
                android:layout_width="254dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvMedicineNumberAdd"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineNumberAdd" />

            <Button
                android:id="@+id/btnMedicineSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <TextView
                android:id="@+id/tvMedicineNameUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="36dp"
                android:text="@string/medicineName"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicineUpdate" />

            <TextView
                android:id="@+id/tvMedicineDetailAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/medicineDetails"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/etMedicineName"
                app:layout_constraintTop_toBottomOf="@+id/etMedicineName" />

            <TextView
                android:id="@+id/tvMedicineNumberAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/medicineNumbers"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/etMedicineDetails"
                app:layout_constraintTop_toBottomOf="@+id/etMedicineDetails" />

            <TextView
                android:id="@+id/tvMedicineDateAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/medicineDate"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/spinnerMedicineNumbers"
                app:layout_constraintTop_toBottomOf="@+id/spinnerMedicineNumbers" />

            <TextView
                android:id="@+id/tvMedicineTimeAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/medicineTime"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextDate"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>